# lyte

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FP_CODEGEN_PLAN.md  GRAMMAR.md  MONOMORPHIZATION.md  Package.swift  README.md  TODO.md  VM.md  build-xcframework.sh  build.rs  crash_jit.lyte  hello.lyte  ref_struct_stack_crash.lyte  shell.nix  stdlib.lyte  stress.sh  test-all.sh  test.sh
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
Sources/CLyte/: empty.c
Sources/CLyte/include/: lyte.h  module.modulemap
Sources/Lyte/: Lyte.swift
benchmark/: LuaJIT_Instructions.md  biquad.c  biquad.lua  biquad.lyte  biquad_c  biquad_f64.lyte  biquad_lua_bytecode.txt  biquad_luajit_bytecode.txt  fft.c  fft.lua  fft.lyte  freeverb_bench.c  hotloop_lua.txt  hotloop_luajit.txt  hotloop_lyte.txt  run-freeverb.sh  run.sh  sk_lpf.c  sk_lpf.lua  sk_lpf.lyte  sort.c  sort.lua  sort.lyte
cli/: Cargo.toml  build.rs
cli/src/: main.rs
cli/tests/: cli.rs
docs/: FP_CODEGEN_PLAN.md  FURTHER_OPTIMIZATIONS.md  GRAMMAR.md  HOT_LOCALS.md  HOT_LOCALS_FUSED_HANDLERS_PLAN.md  LLVM_CALL_DEPTH_REGRESSION.md  MONOMORPHIZATION.md  Stack_VM.md  VM.md  lyte-dsp-quickstart.md  test_improvements.txt  tutorial.md
fuzz/: .gitignore  Cargo.toml  README.md  build.rs
fuzz/fuzz_targets/: checker.rs  compile_jit.rs  compile_vm.rs  differential.rs  lexer.rs  optimizer.rs  packing.rs  parser.rs
lsp/: Cargo.toml
lsp/src/: analysis.rs  diagnostics.rs  goto_def.rs  hover.rs  main.rs
proofs/: CopyPropagation.v  FuseCompareBranch.v  MoveForwarding.v
scripts/: gen_fused_handlers.py
src/: README.md  array_checker.rs  ast.rs  cancel.rs  checker.rs  compiler.rs  decl.rs  decl_table.rs  defs.rs  expr.rs  ffi.rs  gen_vm.py  hoist.rs  interval.rs  ir.rs  irgen.rs  jit.rs  lalrpop_parser_tests.rs  lexer.rs  lib.rs  llvm_aot.rs  llvm_jit.rs  lyte.lalrpop  lyte.pest  main.rs  mangle.rs  monomorph.rs  monomorph_pass.rs  nom_parser.rs  opcode.rs  parser.rs  pest_parser.rs  safety_checker.rs  scc.rs  solver.rs  stack_codegen.rs  stack_depth.rs  stack_discover.rs  stack_hot_locals.rs  stack_inline.rs  (+23 more)
tests/LyteTests/: LyteTests.swift
tests/cases/: alloc.lyte  arenas.lyte  array.lyte  array_in_struct.lyte  array_size.lyte  assignment_expr.lyte  bad_assign.lyte  bad_generic.lyte  basic.lyte  basic_arith.lyte  biquad_bytecode.lyte  booleans.lyte  booleans_vm.lyte  bounds_check.lyte  cat.lyte  char.lyte  defer_reserved.lyte  edit.lyte  empty.lyte  equality.lyte  equality_vm.lyte  escape_sequences.lyte  extern_fn.lyte  f64_window.lyte  floats.lyte  floats_advanced.lyte  floats_vm.lyte  fmul_sum.lyte  for.lyte  for_vm.lyte  freeverb.lyte  ftoa.lyte  func_ref.lyte  functions.lyte  functions_vm.lyte  generic_struct.lyte  generics.lyte  globals.lyte  globals_vm.lyte  hello.lyte  (+65 more)
tests/cases/arith/: basic_arith.lyte  basic_arith_vm.lyte  bytecode_flag.lyte  comparisons.lyte  negation.lyte  numeric_equality.lyte  numeric_equality_vm.lyte  precedence.lyte
tests/cases/arrays/: array.lyte  array_2d.lyte  array_alias_index.lyte  array_alias_index_bad.lyte  array_basic.lyte  array_basic_vm.lyte  array_else_branch.lyte  array_equality.lyte  array_equality_vm.lyte  array_in_struct.lyte  array_in_struct_vm.lyte  array_index_check.lyte  array_index_unsigned.lyte  array_len.lyte  array_len_vm.lyte  array_literal.lyte  array_literal_vm.lyte  array_nested_loop_bad.lyte  array_nested_loop_bounds.lyte  array_off_by_one.lyte  array_pass_to_func.lyte  array_reassign_bad.lyte  array_return.lyte  array_return_vm.lyte  array_size.lyte  array_type.lyte  bad_array_equality.lyte  const_array_repeat.lyte  const_array_size.lyte  const_check_only.lyte  const_multiple.lyte  deeply_nested_array.lyte  fill_array.lyte  fill_array_read.lyte  large_array.lyte  large_array_loop.lyte  loop_monotonic_bad_initial.lyte  loop_monotonic_increment.lyte  loop_mutate_index_bad.lyte  nested_array.lyte  (+8 more)
tests/cases/bytecode/: biquad.lyte  fft.lyte  sort.lyte
tests/cases/checker/: arity_too_few.lyte  arity_too_many.lyte  array_bad_field.lyte  assign_not_assignable.lyte  assign_to_let.lyte  assign_to_slice.lyte  (+45 more)
vscode-lyte/: extension.js  language-configuration.json  package.json
vscode-lyte/syntaxes/: lyte.tmLanguage.json
(+148 files in other folders)
