[workspace]
resolver = "2" # What does this do?
members = [".", "./cli"]
default-members = ["."]

[package]
name = "lyte"
version = "0.1.0"
authors = ["Taylor Holliday <lyte@audulus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internment = "0.8.6"
superslice = "1"
cranelift = "0.125.4"
cranelift-module = "0.125.4"
cranelift-jit = "0.125.4"
cranelift-codegen = "0.125.4"
cranelift-native = "0.125.4"
