[workspace]
resolver = "2" # What does this do?
members = [".", "./cli"]
default-members = ["."]

[package]
name = "lyte"
version = "0.1.0"
authors = ["Taylor Holliday <lyte@audulus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lyte"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
llvm = ["inkwell"]

[dependencies]
internment = "0.8.6"
superslice = "1"
cranelift = "0.129.1"
cranelift-module = "0.129.1"
cranelift-jit = "0.129.1"
cranelift-codegen = "0.129.1"
cranelift-native = "0.129.1"
libc = "0.2"
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }