[workspace]
resolver = "2" # What does this do?
members = [".", "./cli", "./lsp"]
default-members = ["."]
exclude = ["fuzz"]

[package]
name = "lyte"
version = "0.1.0"
authors = ["Taylor Holliday <lyte@audulus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lyte"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["cranelift"]
cranelift = ["dep:cranelift", "dep:cranelift-module", "dep:cranelift-jit", "dep:cranelift-codegen", "dep:cranelift-native"]
llvm = ["inkwell"]

[dependencies]
internment = "0.8.6"
superslice = "1"
cranelift = { version = "0.130.0", optional = true }
cranelift-module = { version = "0.130.0", optional = true }
cranelift-jit = { version = "0.130.0", optional = true }
cranelift-codegen = { version = "0.130.0", optional = true }
cranelift-native = { version = "0.130.0", optional = true }
libc = "0.2"
inkwell = { version = "0.8", features = ["llvm18-1"], optional = true }