[package]
name = "lyte-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lyte"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
lyte = { path = "../" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
goldentests = "1.1.0"
