[package]
name = "lyte-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lyte"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
lyte = { path = "../" }

[dev-dependencies]
goldentests = "1.1.0"
