[package]
name = "lyte-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lyte"
path = "src/main.rs"

[features]
default = ["cranelift"]
cranelift = ["lyte/cranelift"]
llvm = ["lyte/llvm"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
lyte = { path = "../" }

[build-dependencies]
cc = "1"

[dev-dependencies]
goldentests = "1.4.1"
