[workspace]

[package]
name = "lyte-fuzz"
version = "0.0.0"
authors = ["Taylor Holliday"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lyte = { path = "../" }

[[bin]]
name = "lexer"
path = "fuzz_targets/lexer.rs"
test = false
doc = false

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false

[[bin]]
name = "checker"
path = "fuzz_targets/checker.rs"
test = false
doc = false

[[bin]]
name = "compile_jit"
path = "fuzz_targets/compile_jit.rs"
test = false
doc = false

[[bin]]
name = "compile_vm"
path = "fuzz_targets/compile_vm.rs"
test = false
doc = false
